--- a/Architecture/public/index.html
+++ b/Architecture/public/index.html
@@ -9,12 +9,19 @@
 
 <body>
 
+<ul id="users" class="users">
+  <li class="users">
+    <strong data-name></strong>
+  </li>
+</ul>
+
   <script src="./js/chat/model/users.js"></script>
   <script src="./js/chat/model/messages.js"></script>
   <script src="./js/chat/view/users.js"></script>
   <script src="./js/chat/view/messages.js"></script>
+  <script src="./js/chat/view/messageInput.js"></script>
   <script src="./js/chat/controller/users.js"></script>
-  <script src="./js/chat/controller/meassages.js"></script>
+  <script src="js/chat/controller/messages.js"></script>
   <script src="./js/chat/index.js"></script>
 </body>
 
